Implemented full security for serviceCompleted and comments. Implemented view service history for an asset on a site with full security